# skrish2020-SalesAssistantWithRTCRM

./: .env.example  .gitignore  README.md  account_ids.txt  create_sample_data.py  deploy.py  dev.bat  dev.sh  pyproject.toml  requirements.txt  sales_assistant.py  setup.bat  setup.sh  test_sales_assistant.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  index.rst
tests/: conftest.py  test_integration.py  test_sales_assistant.py
