[tool.poetry]
name = "salesforce-sales-assistant"
version = "0.1.0"
description = "Sales Assistant with Salesforce CRM integration using LangChain"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.29.0"
langchain = "^0.1.0"
openai = "^1.3.0"
simple-salesforce = "^1.12.0"
pandas = "^2.1.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
